Bug Fixes & Improvements Removed redundant if statement in sub.html Added NSFW & Spoiler tags to posts (for now, it's a badge.) Fixed a bug where a div would get fitimg, and not the video, causing an overflow, also added poster to hosted videos. Changed code tag to pre in index.html Added navbar to 404.html Added NSFW, Spoiler to types Removed a TODO (as I think it would be way too resource intensive) Version bump (299761 -> 299762)

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -315,3 +315,20 @@ $navmap: (1: left, 2: center, 3: right);
         }
     }
 }
+
+@mixin tag($color) {
+    border: 1px solid $color;
+    text-align: center;
+    color: $color;
+    font-size: 12px;
+    padding: 0px 4px;
+    margin-left: 5px;
+}
+
+.nsfwtag {
+    @include tag(#ff585b)
+}
+
+.spoilertag {
+    @include tag(#757575)
+}
